@@ -1,12 +1,13 @@
 package com.enonic.xp.repo.impl.dump;
 
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -45,10 +46,10 @@ import com.enonic.xp.node.RefreshMode;
 import com.enonic.xp.query.filter.RangeFilter;
 import com.enonic.xp.repo.impl.dump.model.BranchDumpEntry;
 import com.enonic.xp.repo.impl.dump.model.CommitDumpEntry;
+import com.enonic.xp.repo.impl.dump.model.VersionMeta;
 import com.enonic.xp.repo.impl.dump.model.VersionsDumpEntry;
 import com.enonic.xp.repo.impl.dump.writer.DumpWriter;
 import com.enonic.xp.repo.impl.version.VersionIndexPath;
-import com.enonic.xp.repository.Repository;
 import com.enonic.xp.repository.RepositoryConstants;
 import com.enonic.xp.repository.RepositoryId;
 
@@ -56,7 +57,9 @@ public class RepoDumper
 {
     private static final Logger LOG = LoggerFactory.getLogger( RepoDumper.class );
 
-    private final Repository repository;
+    private final RepositoryId repositoryId;
+
+    private final Branches branches;
 
     private final boolean includeVersions;
 
@@ -78,12 +81,13 @@ public class RepoDumper
 
     private RepoDumper( final Builder builder )
     {
-        this.repository = builder.repository;
+        this.repositoryId = builder.repositoryId;
+        this.branches = builder.branches;
         this.includeVersions = builder.includeVersions;
         this.includeBinaries = builder.includeBinaries;
         this.nodeService = builder.nodeService;
         this.writer = builder.writer;
-        this.dumpResult = RepoDumpResult.create( this.repository.getId() );
+        this.dumpResult = RepoDumpResult.create( this.repositoryId );
         this.maxAge = builder.maxAge;
         this.maxVersions = builder.maxVersions;
         this.nodeIds = builder.nodeIds;
@@ -99,7 +103,7 @@ public class RepoDumper
 
         setContext( RepositoryConstants.MASTER_BRANCH ).runWith( () -> {
             this.nodeService.refresh( RefreshMode.ALL );
-            for ( Branch branch : this.repository.getBranches() )
+            for ( Branch branch : this.branches )
             {
                 dumpBranch( branch, nodeIdsAccumulator );
             }
@@ -117,21 +121,21 @@ public class RepoDumper
     {
         setContext( branch ).runWith( () -> {
             final BranchDumpResult.Builder branchDumpResult = BranchDumpResult.create( branch );
-            writer.openBranchMeta( repository.getId(), branch );
+            writer.openBranchMeta( repositoryId, branch );
             try
             {
                 final FindNodesByParentResult children = this.nodeService.findByParent(
-                    FindNodesByParentParams.create().parentId( Node.ROOT_UUID ).recursive( true ).childOrder( ChildOrder.path() ).build() );
+                    FindNodesByParentParams.create().parentId( NodeId.ROOT ).recursive( true ).childOrder( ChildOrder.path() ).build() );
 
                 final NodeIds nodesToDump = nodeIds != null
                     ? children.getNodeIds().stream().filter( nodeIds::contains ).collect( NodeIds.collector() )
                     : children.getNodeIds();
 
-                this.listener.dumpingBranch( repository.getId(), branch, nodesToDump.getSize() + 1 );
-                LOG.info( "Dumping repository [{}], branch [{}]", repository.getId(), branch );
+                this.listener.dumpingBranch( repositoryId, branch, nodesToDump.getSize() + 1 );
+                LOG.info( "Dumping repository [{}], branch [{}]", repositoryId, branch );
 
-                doDumpNode( Node.ROOT_UUID, branch, branchDumpResult );
-                nodeIdsAccumulator.accept( Node.ROOT_UUID );
+                doDumpNode( NodeId.ROOT, branch, branchDumpResult );
+                nodeIdsAccumulator.accept( NodeId.ROOT );
 
                 for ( final NodeId child : nodesToDump )
                 {
@@ -141,9 +145,9 @@ public class RepoDumper
             }
             catch ( Exception e )
             {
-                LOG.error( "Cannot fully dump repository [{}] branch [{}]", repository.getId(), branch, e );
-                branchDumpResult.error( DumpError.error(
-                    "Cannot fully dump repository [" + repository.getId() + "] branch [" + branch + "]: " + e.getMessage() ) );
+                LOG.error( "Cannot fully dump repository [{}] branch [{}]", repositoryId, branch, e );
+                branchDumpResult.error(
+                    DumpError.error( "Cannot fully dump repository [" + repositoryId + "] branch [" + branch + "]: " + e.getMessage() ) );
             }
             finally
             {
@@ -156,28 +160,28 @@ public class RepoDumper
 
     private void dumpVersions( final Collection<NodeId> dumpedNodes )
     {
-        writer.openVersionsMeta( repository.getId() );
+        writer.openVersionsMeta( repositoryId );
         try
         {
             for ( NodeId nodeId : dumpedNodes )
             {
-                final VersionsDumpEntry.Builder builder = VersionsDumpEntry.create( nodeId );
+                final List<VersionMeta> versionMetas = new ArrayList<>();
 
                 final NodeVersionQueryResult versions = getVersions( nodeId );
                 for ( final NodeVersion nodeVersion : versions.getNodeVersions() )
                 {
-                    builder.addVersion( VersionMetaFactory.create( nodeVersion ) );
+                    versionMetas.add( VersionMetaFactory.create( nodeVersion ) );
                     doStoreVersion( nodeVersion, this.dumpResult );
                     this.dumpResult.addedVersion();
                 }
 
-                writer.writeVersionsEntry( builder.build() );
+                writer.writeVersionsEntry( new VersionsDumpEntry( nodeId, versionMetas ) );
             }
         }
         catch ( Exception e )
         {
-            LOG.error( "Cannot fully dump repository [{}] versions", repository.getId(), e );
-            dumpResult.error( DumpError.error( "Cannot fully dump repository [" + repository.getId() + "] versions: " + e.getMessage() ) );
+            LOG.error( "Cannot fully dump repository [{}] versions", repositoryId, e );
+            dumpResult.error( DumpError.error( "Cannot fully dump repository [" + repositoryId + "] versions: " + e.getMessage() ) );
         }
         finally
         {
@@ -187,7 +191,7 @@ public class RepoDumper
 
     private void dumpCommits()
     {
-        writer.openCommitsMeta( repository.getId() );
+        writer.openCommitsMeta( repositoryId );
         try
         {
             final NodeCommitQuery nodeCommitQuery = NodeCommitQuery.create().size( -1 ).build();
@@ -195,12 +199,8 @@ public class RepoDumper
             final NodeCommitEntries nodeCommitEntries = this.nodeService.findCommits( nodeCommitQuery ).getNodeCommitEntries();
 
             nodeCommitEntries.stream()
-                .map( nodeCommitEntry -> CommitDumpEntry.create()
-                    .nodeCommitId( nodeCommitEntry.getNodeCommitId() )
-                    .message( nodeCommitEntry.getMessage() )
-                    .committer( nodeCommitEntry.getCommitter() )
-                    .timestamp( nodeCommitEntry.getTimestamp() )
-                    .build() )
+                .map( nodeCommitEntry -> new CommitDumpEntry( nodeCommitEntry.getNodeCommitId(), nodeCommitEntry.getMessage(),
+                                                              nodeCommitEntry.getTimestamp(), nodeCommitEntry.getCommitter() ) )
                 .forEach( writer::writeCommitEntry );
         }
         finally
@@ -226,7 +226,7 @@ public class RepoDumper
     {
         try
         {
-            writer.writeNodeVersionBlobs( repository.getId(), nodeVersionKey );
+            writer.writeNodeVersionBlobs( repositoryId, nodeVersionKey );
         }
         catch ( Exception e )
         {
@@ -240,7 +240,7 @@ public class RepoDumper
         attachedBinaries.forEach( ( attachedBinary ) -> {
             try
             {
-                this.writer.writeBinaryBlob( repository.getId(), attachedBinary );
+                this.writer.writeBinaryBlob( repositoryId, attachedBinary );
             }
             catch ( Exception e )
             {
@@ -252,7 +252,7 @@ public class RepoDumper
 
     private Context setContext( final Branch branch )
     {
-        return ContextBuilder.from( ContextAccessor.current() ).repositoryId( repository.getId() ).branch( branch ).build();
+        return ContextBuilder.from( ContextAccessor.current() ).repositoryId( repositoryId ).branch( branch ).build();
     }
 
     private void doDumpNode( final NodeId nodeId, final Branch branch, final BranchDumpResult.Builder dumpResult )
@@ -261,8 +261,8 @@ public class RepoDumper
         {
             final BranchDumpEntry branchDumpEntry = createDumpEntry( nodeId, branch );
             writer.writeBranchEntry( branchDumpEntry );
-            writer.writeNodeVersionBlobs( repository.getId(), branchDumpEntry.getMeta().nodeVersionKey() );
-            writeBinaries( dumpResult, branchDumpEntry.getBinaryReferences() );
+            writer.writeNodeVersionBlobs( repositoryId, branchDumpEntry.meta().nodeVersionKey() );
+            writeBinaries( dumpResult, branchDumpEntry.binaryReferences() );
             dumpResult.addedNode();
             this.listener.nodeDumped();
         }
@@ -277,7 +277,7 @@ public class RepoDumper
         binaryReferences.forEach( ref -> {
             try
             {
-                writer.writeBinaryBlob( repository.getId(), BlobKey.from( ref ) );
+                writer.writeBinaryBlob( repositoryId, BlobKey.from( ref ) );
             }
             catch ( RepoDumpException e )
             {
@@ -289,8 +289,6 @@ public class RepoDumper
 
     private BranchDumpEntry createDumpEntry( final NodeId nodeId, final Branch branch )
     {
-        final BranchDumpEntry.Builder builder = BranchDumpEntry.create().nodeId( nodeId );
-
         final Node currentNode = this.nodeService.getById( nodeId );
 
         final NodeVersion currentVersion = this.nodeService.getActiveVersions(
@@ -298,15 +296,12 @@ public class RepoDumper
             .getNodeVersions()
             .get( branch );
 
-        builder.meta( VersionMetaFactory.create( currentVersion ) );
+        final VersionMeta meta = VersionMetaFactory.create( currentVersion );
 
-        if ( this.includeBinaries )
-        {
-            builder.setBinaryReferences(
-                currentNode.getAttachedBinaries().stream().map( AttachedBinary::getBlobKey ).collect( Collectors.toList() ) );
-        }
+        final List<String> binaryReferences =
+            this.includeBinaries ? currentNode.getAttachedBinaries().stream().map( AttachedBinary::getBlobKey ).toList() : List.of();
 
-        return builder.build();
+        return new BranchDumpEntry( nodeId, meta, binaryReferences );
     }
 
     private NodeVersionQueryResult getVersions( final NodeId nodeId )
@@ -330,7 +325,9 @@ public class RepoDumper
 
     public static final class Builder
     {
-        private Repository repository;
+        private RepositoryId repositoryId;
+
+        private Branches branches;
 
         private boolean includeVersions;
 
@@ -352,9 +349,15 @@ public class RepoDumper
         {
         }
 
-        public Builder repository( final Repository val )
+        public Builder repositoryId( final RepositoryId val )
         {
-            repository = val;
+            repositoryId = val;
+            return this;
+        }
+
+        public Builder branches( final Branches val )
+        {
+            branches = val;
             return this;
         }
 
